2007-04-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/flow.c (igraph_i_mincut_value_undirected)
	(igraph_i_mincut_undirected) : former renamed to latter and 
	minimum cut calculation added, there is a simple wrapper under the 
	name of the former
	(igraph_mincut) : added, simple wrapper
	* examples/simple/igraph_mincut.c : added

2007-03-31  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isoclass_create) : bug corrected, sometimes 
	isolates were left out.

	* src/type_indexededgelist.c (igraph_neighbors) : always return 
	sorted vertex id lise
	* src/motifs.c (igraph_motifs_randesu) : this nasty implementation
	used the fact that for a directed graph and IGRAPH_ALL, the outgoing 
	edges came first. Not anymore, updated.

	* src/type_indexededgelist.c (igraph_add_edges) : make sure that
	for undirected graphs the smaller node id is in 'from'

	* src/adjlist.c (igraph_i_adjlist_sort)
	(igraph_i_lazy_adjlist_get_real) : updated to take advantage of 
	the sorted neighbor lists

	* src/vector.c (igraph_vector_binsearch2) : added
	* src/topology.c (igraph_isomorphism_vf2) : updated to use binsearch2

	* src/vector.c (igraph_vector_order, igraph_vector_order1) : two vectors 
	can be supplied now as the basis of the ranking, 
	old version renamed to igraph_vector_order1
	* src/measure_dynamics.c (igraph_measure_dynamics_d_d)
	(igraph_measure_dynamics_d_d_st)
	* src/structural_properties.c (igraph_transitivity_avglocal_undirected)
	(igraph_transitivity_local_undirected2)
	(igraph_transitivity_local_undirected4)
	(igraph_transitivity_undirected)
	* src/type_indexededgelist.c (igraph_add_edges, igraph_delete_edges)
	(igraph_delete_vertices) : updated
	
	* examples/simple/vector.c

	* src/topology.c (igraph_isomorphic_vf2) : modified to use 
	sorted adjacency lists

	* src/foreign.c (igraph_read_graph_graphdb) : added

	* src/adjlist.c (igraph_i_lazy_adjlist_get_real) 
	* src/igraph.h (igraph_i_lazy_adjlist_simplify_t) : SORT option added
