@@ -1,2 +1,4 @@
 mincut value: 4
-first partition: 2 3 6 7 
+first partition:  2 3 6 7 
+second partition: 0 1 4 5 
+edges in the cut: 1-2 5-6 
