@@ -1019,6 +1019,8 @@ int igraph_st_mincut_value(const igraph_t *graph, igraph_real_t *res,
 int igraph_mincut(const igraph_t *graph,
 		  igraph_integer_t *value,
 		  igraph_vector_t *partition,
+		  igraph_vector_t *partition2,
+		  igraph_vector_t *cut,
 		  const igraph_vector_t *capacity);
 
 int igraph_st_vertex_connectivity(const igraph_t *graph, 
